--- a/lottery-admin/src/main/resources/templates/common/header.html
+++ b/lottery-admin/src/main/resources/templates/common/header.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div id="header" v-cloak>
-		<nav class="navbar navbar-expand-sm bg-info navbar-dark">
+		<nav class="navbar navbar-expand-sm bg-info navbar-dark" style="justify-content: space-between;">
 			<ul class="navbar-nav">
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/game-manage'}" v-on:click="navTo('/game-manage')"><a class="nav-link" href="#">游戏管理</a></li>
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/lottery-situation'}" v-on:click="navTo('/lottery-situation')"><a class="nav-link" href="#">开奖情况</a></li>
@@ -23,7 +23,12 @@
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/config-manage'}" v-on:click="navTo('/config-manage')"><a class="nav-link" href="#">配置项管理</a></li>
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/data-dict'}" v-on:click="navTo('/data-dict')"><a class="nav-link" href="#">数据字典</a></li>
 			</ul>
+			<form class="form-inline" style="float: right;">
+				<span style="padding-right: 20px;">欢迎你:{{userName}}</span>
+				<button type="button" class="btn btn-light btn-sm" v-on:click="logout">退出登录</button>
+			</form>
 		</nav>
+
 	</div>
 	<script type="text/javascript">
 		Vue.http.interceptors.push(function(request) {
@@ -41,16 +46,48 @@
 		var header = new Vue({
 			el : '#header',
 			data : {
-				currentPathName : '',
+				userName : '',
+				currentPathName : ''
 			},
 			computed : {},
 			created : function() {
 				this.currentPathName = window.location.pathname;
+				this.getUserAccountInfo();
 			},
 			methods : {
 				navTo : function(url) {
 					window.location.href = url;
-				}
+				},
+
+				/**
+				 * 获取用户账号信息
+				 */
+				getUserAccountInfo : function() {
+					var that = this;
+					that.$http.get('/userAccount/getUserAccountInfo').then(function(res) {
+						if (res.body.data == null) {
+							that.isLoggedInFlag = false;
+						} else {
+							that.userName = res.body.data.userName;
+						}
+					});
+				},
+
+				logout : function() {
+					this.$http.post('/logout').then(function(res) {
+						layer.open({
+							title : '提示',
+							icon : '1',
+							closeBtn : 0,
+							btn : [],
+							content : '退出成功!',
+							time : 2000,
+							end : function() {
+								window.location.href = '/login';
+							}
+						});
+					});
+				},
 			}
 		});
 	</script>
