--- a/lottery-admin/src/main/resources/templates/account-manage.html
+++ b/lottery-admin/src/main/resources/templates/account-manage.html
@@ -48,6 +48,10 @@
 	</div>
 </script>
 <style type="text/css">
+.add-account-modal-dialog {
+	max-width: 100%;
+	width: 40%;
+}
 </style>
 </head>
 
@@ -63,7 +67,76 @@
 			</div>
 			<button type="button" class="btn btn-danger" v-on:click="refreshTable">搜索</button>
 		</form>
+		<form class="form-inline common-query-cond-form float-right" action="#">
+			<button type="button" class="btn btn-info " v-on:click="openAddAccountModal">新增账号</button>
+		</form>
 		<table class="common-table account-manage-table"></table>
+		<div v-if="addUserAccountFlag">
+			<div class="modal-mask">
+				<div class="modal-wrapper">
+					<div class="modal-dialog add-account-modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title">新增账号</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close" v-on:click="addUserAccountFlag = false">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="modal-body">
+								<form>
+									<div class="form-group row">
+										<div class="col-sm-12">
+											<label>邀请人:</label> <input type="text" class="form-control" v-model="selectedAccount.inviterUserName">
+										</div>
+									</div>
+									<div class="form-group row">
+										<div class="col-sm-12">
+											<label>用户名:</label> <input type="text" class="form-control" v-model="selectedAccount.userName">
+										</div>
+									</div>
+									<div class="form-group row">
+										<div class="col-sm-12">
+											<label>真实姓名:</label> <input type="text" class="form-control" v-model="selectedAccount.realName">
+										</div>
+									</div>
+									<div class="form-group row">
+										<div class="col-sm-12">
+											<label>登录密码:</label> <input type="text" class="form-control" v-model="selectedAccount.loginPwd">
+										</div>
+									</div>
+									<div class="form-group row">
+										<div class="col-sm-6">
+											<label>账号类型:</label>
+											<div>
+												<template v-for="dictItem in accountTypeDictItems">
+												<div class="custom-control custom-radio custom-control-inline">
+													<input type="radio" class="custom-control-input" :id="'accountType' + dictItem.dictItemCode" v-model="selectedAccount.accountType" :value="dictItem.dictItemCode"> <label class="custom-control-label" :for="'accountType' + dictItem.dictItemCode">{{dictItem.dictItemName}}</label>
+												</div>
+												</template>
+											</div>
+										</div>
+										<div class="col-sm-6">
+											<label>状态:</label>
+											<div>
+												<template v-for="dictItem in accountStateDictItems">
+												<div class="custom-control custom-radio custom-control-inline">
+													<input type="radio" class="custom-control-input" :id="'accountState' + dictItem.dictItemCode" v-model="selectedAccount.state" :value="dictItem.dictItemCode"> <label class="custom-control-label" :for="'accountState' + dictItem.dictItemCode">{{dictItem.dictItemName}}</label>
+												</div>
+												</template>
+											</div>
+										</div>
+									</div>
+								</form>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-success btn-sm" v-on:click="addUserAccount">保存</button>
+								<button type="button" class="btn btn-sm" v-on:click="addUserAccountFlag = false">取消</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div v-if="accountEditFlag">
 			<div class="modal-mask">
 				<div class="modal-wrapper">
