--- a/lottery-admin/src/main/resources/templates/common/header.html
+++ b/lottery-admin/src/main/resources/templates/common/header.html
@@ -13,6 +13,8 @@
 	<div id="header" v-cloak>
 		<nav class="navbar navbar-expand-sm bg-info navbar-dark" style="justify-content: space-between;">
 			<ul class="navbar-nav">
+				<li class="nav-item" v-bind:class="{'active': currentPathName == '/statistics-analysis'}" v-on:click="navTo('/statistics-analysis')"><a class="nav-link">统计分析</a></li>
+				<li class="nav-item" v-bind:class="{'active': currentPathName == '/master-control-room'}" v-on:click="navTo('/master-control-room')"><a class="nav-link">总控室</a></li>
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/game-manage'}" v-on:click="navTo('/game-manage')"><a class="nav-link">游戏管理</a></li>
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/lottery-situation'}" v-on:click="navTo('/lottery-situation')"><a class="nav-link">开奖情况</a></li>
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/betting-record'}" v-on:click="navTo('/betting-record')"><a class="nav-link">投注记录</a></li>
