--- a/lottery-admin/src/main/resources/templates/lottery-situation.html
+++ b/lottery-admin/src/main/resources/templates/lottery-situation.html
@@ -42,7 +42,7 @@
 				</select>
 			</div>
 			<div class="form-group common-query-cond">
-				<label>日期:</label><input type="date" class="form-control" v-model="lotteryDate">
+				<label>开奖日期:</label><input type="date" class="form-control" v-model="lotteryStartDate"><span>到</span><input type="date" class="form-control" v-model="lotteryEndDate">
 			</div>
 			<button type="button" class="btn btn-danger" v-on:click="refreshTable">搜索</button>
 		</form>
