--- a/lottery-web/src/main/resources/templates/register.html
+++ b/lottery-web/src/main/resources/templates/register.html
@@ -57,7 +57,7 @@
 				<div class="col-sm-6 offset-sm-3">
 					<h2>用户注册</h2>
 					<form>
-						<div class="form-group">
+						<div class="form-group" v-if="inviteRegisterFlag">
 							<label>邀请码:</label> <input type="text" class="form-control" v-model="inviteCode">
 						</div>
 						<div class="form-group">
@@ -98,6 +98,7 @@
 		new Vue({
 			el : '#register',
 			data : {
+				inviteRegisterFlag : false,
 				registerSuccessFlag : false,
 				inviteCode : '',
 				userName : '',
@@ -107,15 +108,25 @@
 			},
 			computed : {},
 			created : function() {
+				this.loadInviteRegisterSetting();
 			},
 			methods : {
+
+				loadInviteRegisterSetting : function() {
+					var that = this;
+					that.$http.get('/masterControl/getInviteRegisterSetting').then(function(res) {
+						if (res.body.data != null) {
+							that.inviteRegisterFlag = res.body.data.enabled;
+						}
+					});
+				},
 
 				/**
 				 * 注册
 				 */
 				register : function() {
 					var that = this;
-					if (that.inviteCode == null || that.inviteCode == '') {
+					if (that.inviteRegisterFlag && (that.inviteCode == null || that.inviteCode == '')) {
 						layer.alert('请输入邀请码');
 						return;
 					}
