--- a/lottery-web/src/main/resources/templates/common/ssc.html
+++ b/lottery-web/src/main/resources/templates/common/ssc.html
@@ -87,7 +87,7 @@
 				</div>
 				<div class="pre-betting-btn-operation-area">
 					<button type="button" class="btn btn-success btn-sm" v-on:click="addToPreBettingOrder">添加号码</button>
-					<button type="button" class="btn btn-danger btn-sm">一键投注</button>
+					<button type="button" class="btn btn-danger btn-sm" v-on:click="onekeyPlaceOrder">一键投注</button>
 					<button type="button" class="btn btn-success btn-sm">机选10注</button>
 					<!-- <button type="button" class="btn btn-danger btn-sm" v-bind:class="{'disabled': bettingCount <= 1}">显示包牌组合</button> -->
 				</div>
