--- a/lottery-mobile/src/main/resources/templates/common/footer.html
+++ b/lottery-mobile/src/main/resources/templates/common/footer.html
@@ -31,7 +31,11 @@
 <body>
 	<div id="footer" v-cloak>
 		<nav class="navbar fixed-bottom bg-light footer-navbar">
-			<a class="navbar-brand footer-navbar-brand" v-on:click="goTo('/')" v-bind:class="{'selected-footer-navbar-brand': currentPathName == '/'}"><i class="fa fa-home" aria-hidden="true"></i> <span>首页</span> </a> <a class="navbar-brand footer-navbar-brand" v-on:click="goTo('/game-hall')" v-bind:class="{'selected-footer-navbar-brand': currentPathName == '/game-hall'}"><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>游戏</span></a> <a class="navbar-brand footer-navbar-brand"><i class="fa fa-hourglass" aria-hidden="true"></i><span>开奖</span></a> <a class="navbar-brand footer-navbar-brand"><i class="fa fa-gift" aria-hidden="true"></i><span>优惠</span></a> <a class="navbar-brand footer-navbar-brand"><i class="fa fa-user" aria-hidden="true"></i><span>我的</span></a>
+			<a class="navbar-brand footer-navbar-brand" v-on:click="goTo('/')" v-bind:class="{'selected-footer-navbar-brand': currentPathName == '/'}"><i class="fa fa-home" aria-hidden="true"></i> <span>首页</span> </a> 
+			<a class="navbar-brand footer-navbar-brand" v-on:click="goTo('/game-hall')" v-bind:class="{'selected-footer-navbar-brand': currentPathName == '/game-hall'}"><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>游戏</span></a> 
+			<a class="navbar-brand footer-navbar-brand" v-on:click="goTo('/lottery-hall')" v-bind:class="{'selected-footer-navbar-brand': currentPathName == '/lottery-hall'}"><i class="fa fa-hourglass" aria-hidden="true"></i><span>开奖</span></a> 
+			<a class="navbar-brand footer-navbar-brand"><i class="fa fa-gift" aria-hidden="true"></i><span>优惠</span></a> 
+			<a class="navbar-brand footer-navbar-brand"><i class="fa fa-user" aria-hidden="true"></i><span>我的</span></a>
 		</nav>
 	</div>
 	<script type="text/javascript">
